navbar and bg colour
added a navigation bar and changed the background colour of the webpage itself.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psalm de Mesa: 11TDG Portfolio</title>
+<style>
+    .circle{
+        height:50px;
+        width:50px;
+        background-color: #fff;
+        border-radius:50%;
+    }
+</style>
 </head>
 <body>
-    
+    <div class="navbar">
+        <ul>
+            <a href = "#introduction" class="nav">Psalm de Mesa</a>
+            <a href = "#aboutme" class="nav">About</a>
+            <a href = "#tools" class="nav">Tools</a>
+            <a href = "#projects" class="nav">Projects</a>
+            <a href = "#support" class="nav">Support</a>
+            <div class="circle"></div>
+        </ul>
+    </div>
 </body>
 </html>
