--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 </head>
 <body>
-    <div class="navbar">
+    <div class="navigation">
         <ul>
             <a href = "#introduction" class="nav">Psalm de Mesa</a>
             <a href = "#aboutme" class="nav">About</a>
