--- a/index.html
+++ b/index.html
@@ -2,27 +2,18 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Cute+Font&family=Jersey+25&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psalm de Mesa: 11TDG Portfolio</title>
-<style>
-    .circle{
-        height:50px;
-        width:50px;
-        background-color: #fff;
-        border-radius:50%;
-    }
-</style>
 </head>
 <body>
     <div class="navigation">
+        <a href = "#homepage" class="home">Psalm de Mesa</a>
         <ul>
-            <a href = "#introduction" class="nav">Psalm de Mesa</a>
             <a href = "#aboutme" class="nav">About</a>
             <a href = "#tools" class="nav">Tools</a>
             <a href = "#projects" class="nav">Projects</a>
-            <a href = "#support" class="nav">Support</a>
-            <div class="circle"></div>
         </ul>
     </div>
 </body>
