Styled my homepage
I added 2 images and texts that are based from my figma design.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psalm de Mesa: 11TDG Portfolio</title>
+<style>
+    .square{
+        height: 50px;
+        width: 150px;
+        background-color:#464444;
+        border-radius: 20px;
+        margin-left: 30px;
+    }
+</style>
 </head>
 <body>
     <div class="navigation">
@@ -15,6 +24,17 @@
             <a href = "#tools" class="nav">Tools</a>
             <a href = "#projects" class="nav">Projects</a>
         </ul>
+    </div>
+    <div class="introduction" id="homepage">
+        <br>
+        <br>
+        <h6 class="name">Psalm Emmanuelle De Mesa</h6>
+        <h3 class="year"> Year 11 Portfolio</h3>
+        <div class="square">
+            <p class="contact">CONTACT ME</p>
+        </div>
+<img class="homepicture1" src="me pc.jpg" alt="Psalm de Mesa">
+<img class="homepicture2" src="me pc2.jpg" alt="Psalm de Mesa">
     </div>
 </body>
 </html>
