--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psalm de Mesa: 11TDG Portfolio</title>
+    <link rel="icon" href="Haircuts i MIGHT get.jpg" type="image/x-icon">
 <style>
     .square{
         height: 50px;
