Edited my nav bar
I added cute emojis to match the font :)

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 </head>
 <body>
     <div class="navigation">
-        <a href = "#homepage" style="text-decoration: none"; class="home">Home</a>
+        <a href = "#homepage" style="text-decoration: none"; class="home">Home 🏠</a>
         <ul>
-            <a href = "#aboutme" class="aboutButton">About</a>
-            <a href = "#tools" class="toolsButton">Tools</a>
-            <a href = "#projects" class="projectsButton">Projects</a>
+            <a href = "#aboutme" class="aboutButton">About ✍🏼</a>
+            <a href = "#tools" class="toolsButton">Tools 🔦</a>
+            <a href = "#projects" class="projectsButton">Projects 🔨</a>
         </ul>
     </div>
 
