Changed a few square tags
I have edited the square 2 tag from the feedback button.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="square1">
             <p class="contact">CONTACT ME</p>
         </div>
-        <div class="square2">
+        <div class="square1">
             <p class="feedback">FEEDBACK</p>
         </div>
         </div>
@@ -82,7 +82,7 @@
         <br>
         <br>
         <br>
-        <h5>Tools</h5>
+        <h5 class="toolTitle">Tools</h5>
         <h6 class="toolsText">Front-end:</h6> 
         <div class="square2">
             <p class="toolsName">HTML</p>
