Added my projects section
I have added my projects section and styled it. I have also added a projects file where all my project will be compiled.

--- a/index.html
+++ b/index.html
@@ -7,23 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psalm de Mesa: 11TDG Portfolio</title>
     <link rel="icon" href="Haircuts i MIGHT get.jpg" type="image/x-icon">
-<style>
-    .square1{
-        height: 50px;
-        width: 150px;
-        background-color:#464444;
-        border-radius: 20px;
-        margin-left: 30px;
-        display: block;
-    }
-    .square2{
-        height: 50px;
-        width: 150px;
-        background-color:#464444;
-        border-radius: 20px;
-        margin-left: 30px;
-    }
-</style>
 </head>
 <body>
     <div class="navigation">
@@ -51,6 +34,7 @@
 <img class="homepicture1" src="me pc.jpg" alt="Psalm de Mesa">
 <img class="homepicture2" src="me pc2.jpg" alt="Psalm de Mesa">
     </div>
+
     <br>
     <br>
     <br>
@@ -76,12 +60,13 @@
         <h6 class="aboutSubtitle">Present</h6>
         <p class="aboutDescription">I am currently studying JavaScript and other helpful tags for CSS and HTML. I have recently finished a starter web page about what I did during the holidays. It has helped me practice JavaScript, other HTML and CSS tags.</p>
     </div>
-
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="tools" id="tools">
-        <br>
-        <br>
-        <br>
-        <br>
+    <br>
+    <br>
         <h5 class="toolTitle">Tools</h5>
         <h6 class="toolsText">Front-end:</h6> 
         <div class="square2">
@@ -104,6 +89,24 @@
         </div> 
         <div class="square2">
             <p class="toolsName">VS Code</p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="projects" id="projects">
+    <br>
+    <br>
+        <h5 class="projectsTitle">Projects</h5>
+        <a href="#projectOne"><div class="rectangle1"></a>
+            <h1 class="projectsNumber">ONE</h1>
+        </div>
+        <a href="#projectTwo"><div class="rectangle2"></a>
+            <h1 class="projectsNumber">TWO</h1>
+        </div>
+        <a href="#projectThree"><div class="rectangle3"></a>
+            <h1 class="projectsNumber">THREE</h1>
         </div>
     </div>
 </body>
