Navigation Bar in my Projects file
I have added a navigation bar in my projects file.

--- a/projects.html
+++ b/projects.html
@@ -10,5 +10,12 @@
     <link rel="icon" href="Haircuts i MIGHT get.jpg" type="image/x-icon">
 </head>
 <body>
-    
+    <div class="navigation">
+        <a href = "#homepage" style="text-decoration: none"; class="home">Home 🏠</a>
+        <ul>
+            <a href = "#aboutme" class="aboutButton">About ✍🏼</a>
+            <a href = "#tools" class="toolsButton">Tools 🔦</a>
+            <a href = "#projects" class="projectsButton">Projects 🔨</a>
+        </ul>
+    </div> 
 </body>
