--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
         </ul>
     </div>
 
-<!--deleted id= "homepage" and nested divs a little more cos my eyes be bad 👀-->
-    <div class="introduction">
+    <div class="introduction" id="homepage">
         <br>
         <br>
         <h6 class="name">Psalm Emmanuelle De Mesa</h6>
         <h3 class="year"> Year 11 Portfolio</h3>
         <div>
-            <div class="square1">
-                <p class="contact">CONTACT ME</p>
-            </div>
-            <div class="square1">
-                <p class="feedback">FEEDBACK</p>
-            </div>
+        <div class="square1">
+            <p class="contact">CONTACT ME</p>
         </div>
-        <img class="homepicture1" src="me pc.jpg" alt="Psalm de Mesa">
-        <img class="homepicture2" src="me pc2.jpg" alt="Psalm de Mesa">
+        <div class="square1">
+            <p class="feedback">FEEDBACK</p>
+        </div>
+        </div>
+<img class="homepicture1" src="me pc.jpg" alt="Psalm de Mesa">
+<img class="homepicture2" src="me pc2.jpg" alt="Psalm de Mesa">
     </div>
 
     <br>
