Added a JS file, edited html, edited css, edited projects file
I have made tons of edits on my index, css, and projects file.

--- a/index.html
+++ b/index.html
@@ -22,21 +22,19 @@
         <br>
         <br>
         <h6 class="name">Psalm Emmanuelle De Mesa</h6>
+        <br>
         <h3 class="year"> Year 11 Portfolio</h3>
-        <div>
-        <div class="square1">
-            <p class="contact">CONTACT ME</p>
-        </div>
-        <div class="square1">
-            <p class="feedback">FEEDBACK</p>
-        </div>
+        <br>
+        <div class="button-container">
+            <button class="contact" onclick="expandRectangle()">CONTACT ME</button>
+            <button class="feedback" onclick="expandRectangle()">FEEDBACK</button>
         </div>
 <img class="homepicture1" src="me pc.jpg" alt="Psalm de Mesa">
 <img class="homepicture2" src="me pc2.jpg" alt="Psalm de Mesa">
     </div>
+    <br>
+    <br>
 
-    <br>
-    <br>
     <br>
     <br>
     <div class="about" id="aboutme">
@@ -99,15 +97,21 @@
     <br>
     <br>
         <h5 class="projectsTitle">Projects</h5>
-        <a href="#projectOne"><div class="rectangle1"></a>
+    <a href="projects.html#projectOne">
+        <div class="rectangle1">
             <h1 class="projectsNumber">ONE</h1>
         </div>
-        <a href="#projectTwo"><div class="rectangle2"></a>
+    </a>
+    <a href="projects.html#projectTwo">
+        <div class="rectangle2">
             <h1 class="projectsNumber">TWO</h1>
         </div>
-        <a href="#projectThree"><div class="rectangle3"></a>
+    </a>
+    <a href="projects.html#projectThree">
+        <div class="rectangle3">
             <h1 class="projectsNumber">THREE</h1>
         </div>
+    </a>
     </div>
 </body>
 </html>
