--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <link rel="index" href="index.html">
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Cute+Font&family=Jersey+25&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +10,23 @@
 </head>
 <body>
     <div class="navigation">
-        <a href = "#homepage" style="text-decoration: none"; class="home">Home 🏠</a>
+        <a href = "index.html#homepage" style="text-decoration: none"; class="home">Home 🏠</a>
         <ul>
-            <a href = "#aboutme" class="aboutButton">About ✍🏼</a>
-            <a href = "#tools" class="toolsButton">Tools 🔦</a>
-            <a href = "#projects" class="projectsButton">Projects 🔨</a>
+            <a href = "index.html#aboutme" class="aboutButton">About ✍🏼</a>
+            <a href = "index.html#tools" class="toolsButton">Tools 🔦</a>
+            <a href = "index.html#projects" class="projectsButton">Projects 🔨</a>
         </ul>
     </div> 
+
+    <div id="projectOne">
+        <h1>Project One</h1>
+    </div>
+    <br>
+    <div id="projectTwo">
+        <h1>Project Two</h1>
+    </div>
+    <br>
+    <div class="projectThree">
+        <h1>Project Three</h1>
+    </div>
 </body>
