changed my tools section
aligned the button to be at the center and styled them.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         
         <h6 class="aboutSubtitle">Portfolio</h6>
         <p class="aboutDescription">This portfolio will serve as an exhibition of different topics. It will feature the processes and steps that I have executed including the changes I have made in my design, code, and overall outcome. Projects that I will make in the next few terms will also be shown in the ‘Projects’ section including a description on what is featured in that project.</p>
-        <br>
         <h6 class="aboutSubtitle">Past</h6>
         <p class="aboutDescription">Past Projects were part of the process that I executed to develop certain skills that I have today. Here are the projects that I have done:
             <br>
@@ -54,7 +53,6 @@
             <br>
             Year 10 (2024) : 3d models of things around us. A simple game that we have developed using Ozaria. 
         </p>
-        <br>
         <h6 class="aboutSubtitle">Present</h6>
         <p class="aboutDescription">I am currently studying JavaScript and other helpful tags for CSS and HTML. I have recently finished a starter web page about what I did during the holidays. It has helped me practice JavaScript, other HTML and CSS tags.</p>
     </div>
@@ -67,26 +65,26 @@
     <br>
         <h5 class="toolTitle">Tools</h5>
         <h6 class="toolsText">Front-end:</h6> 
-        <div class="square2">
-            <p class="toolsName">HTML</p>
+        <div class="button-container2">
+            <button class="toolsName">HTML</button>
         </div> 
-        <div class="square2">
-            <p class="toolsName">JavaScript</p>
+        <div class="button-container2">
+            <button class="toolsName">JavaScript</button>
         </div>
         <h6 class="toolsText">Styling:</h6> 
-        <div class="square2">
-            <p class="toolsName">CSS</p>
+        <div class="button-container2">
+            <button class="toolsName">CSS</button>
         </div>
         <h6 class="toolsText">Designing:</h6> 
-        <div class="square2">
-            <p class="toolsName">Figma</p>
+        <div class="button-container2">
+            <button class="toolsName">Figma</button>
         </div> 
         <h6 class="toolsText">Others:</h6> 
-        <div class="square2">
-            <p class="toolsName">GitHub</p>
+        <div class="button-container2">
+            <button class="toolsName">GitHub</button>
         </div> 
-        <div class="square2">
-            <p class="toolsName">VS Code</p>
+        <div class="button-container2">
+            <button class="toolsName">VS Code</button>
         </div>
     </div>
     <br>
