Added a images folder
to keep it organise

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psalm de Mesa: 11TDG Portfolio</title>
-    <link rel="icon" href="Haircuts i MIGHT get.jpg" type="image/x-icon">
+    <link rel="icon" href="images/Haircuts i MIGHT get.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="navigation">
@@ -29,8 +29,8 @@
             <button class="contact" onclick="expandRectangle()">CONTACT ME</button>
             <button class="feedback" onclick="expandRectangle()">FEEDBACK</button>
         </div>
-<img class="homepicture1" src="me pc.jpg" alt="Psalm de Mesa">
-<img class="homepicture2" src="me pc2.jpg" alt="Psalm de Mesa">
+<img class="homepicture1" src="images/me pc.jpg" alt="Psalm de Mesa">
+<img class="homepicture2" src="images/me pc2.jpg" alt="Psalm de Mesa">
     </div>
     <br>
     <br>
