--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h3 class="year"> Year 11 Portfolio</h3>
         <br>
         <div class="button-container">
-            <button class="contact" onclick="expandRectangle()">CONTACT ME</button>
-            <button class="feedback" onclick="expandRectangle()">FEEDBACK</button>
+            <button class="contact" >CONTACT ME</button>
+            <button class="feedback" >FEEDBACK</button>
         </div>
 <img class="homepicture1" src="images/me pc.jpg" alt="Psalm de Mesa">
 <img class="homepicture2" src="images/me pc2.jpg" alt="Psalm de Mesa">
