Updated my first project
added my design considerations

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psalm de Mesa: 11TDG Portfolio</title>
-    <link rel="icon" href="Haircuts i MIGHT get.jpg" type="image/x-icon">
+    <link rel="icon" href="images/Haircuts i MIGHT get.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="navigation">
@@ -19,7 +19,11 @@
     </div> 
 
     <div id="projectOne">
-        <h1>Project One</h1>
+        <h1>Low Poly Character</h1>
+        <h5>Overview</h5>
+        <p>I will be creating a Low Poly Character for a game inspired by Mobile Legends. This will include sketching, modelling, and animating the character. The character will be modelled in blender as well as rigging the character to animate it while idle, running, etc.</p>
+        <h5>End Users</h5>
+        <p>The end user of this project would be 14-20 year old people that are into Mobile Legends as well as people who likes playing fictional games.</p>
     </div>
     <br>
     <div id="projectTwo">
