Added my requirements and specifications

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,26 @@
         <h5>Overview</h5>
         <p>I will be creating a Low Poly Character for a game inspired by Mobile Legends. This will include sketching, modelling, and animating the character. The character will be modelled in blender as well as rigging the character to animate it while idle, running, etc.</p>
         <h5>End Users</h5>
-        <p>The end user of this project would be 14-20 year old people that are into Mobile Legends as well as people who likes playing fictional games.</p>
+        <p>The end user of this project would be 14-20 year old people that are into Mobile Legends as well as people who likes playing fictional games preferably people above the age of 14 as this game is designed to be violent. People at this age prefer graphics/characters to be detailed and creative. This includes adding levels to the character and to see growth in the character. It would also require game money that could be purchased at a low price as advertising it expensive doesn't attract that much people to buy the product. Adding different second-lead characters would also help attract people as they can engage and interact with other characters played by different people.</p>
+        <h5>Requirements</h5>
+        <ul>
+            <h6>The character should have the following:</h6>
+            <p>Head</p>
+            <p>Hair</p>
+            <p>Neck</p>
+            <p>Shoulders</p>
+            <p>Torso</p>
+            <p>Legs</p>
+            <p>Feet</p>
+            <p>Tail</p>
+            <p>Weapon</p>
+        </ul>
+        <h5>Specifications</h5>
+        <ul>
+            <p>The upper torso will be narrower than the lower torso.</p>
+            <p>The colours of the character should incorporate the colours of a fox which are red, orange, white, black.</p>
+            <p>The weapon of the character should be related to fictional life. Maybe create a gun that doesn't shoot bullets.</p>
+        </ul>
     </div>
     <br>
     <div id="projectTwo">
