--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,7 @@
             <h6>The character should have the following:</h6>
             <p>Head</p>
             <p>Hair</p>
+            <p>Fox Ears</p>
             <p>Neck</p>
             <p>Shoulders</p>
             <p>Torso</p>
