--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     </div> 
 
     <div id="projectOne">
-        <h1>Low Poly Character</h1>
+        <h1>Project 1: Low Poly Character</h1>
         <h5>Overview</h5>
         <p>I will be creating a Low Poly Character for a game inspired by Mobile Legends. This will include sketching, modelling, and animating the character. The character will be modelled in blender as well as rigging the character to animate it while idle, running, etc.</p>
         <h5>End Users</h5>
@@ -44,6 +44,16 @@
             <p>The colours of the character should incorporate the colours of a fox which are red, orange, white, black.</p>
             <p>The weapon of the character should be related to fictional life. Maybe create a gun that doesn't shoot bullets.</p>
         </ul>
+    <br>
+        <h3>Relevant Implications</h3>
+        <h6>Aesthetics</h6>
+        <p>To maintain the aesthetics of my character, I will continue to use the same colour pallete throughout this project and make sure that the aesthetics will also please my end-users. I would also ask feedback from my peers to gather information about improvement and what I could change to make the product look proper.</p>
+        <h6>Usability</h6>
+        <p>I will be testing every now and then to check whether the changes that I have made with aesthetics as well as functionality has affected the usability of my character. By doing this step, I can avoid bigger problems as I can easily keep track on what part of the process has affected the usability of my character. I will also gather feedback from by peers and ask how their experience with my character, whether the quality of my character is okay anad not experiencing problems.</p>
+        <h6>Functionality</h6>
+        <p>To make sure that my character is functioning properly, I will ensure that the steps that I have made throughout this project will make my character function the way that my end-users want it to function. I will also make sure that my character functions properly and is not affecting any other factor outside funcionality such as usability and aesthetics.</p>
+        <h6>Intellectual Property</h6>
+        <p>This character is inspired by a character from the game 'Mobile Legends: Bang Bang' name 'Nana' who is a sweet Leonin. My character on the other hand is a human fox. By changing features such as colours, face shape, and overall aura, I would be able to make my character different from existing characters. I would also not allow people copying my work as it is my right to have my work protected but people can use my character as a inspiration for theirs.</p>
     </div>
     <br>
     <div id="projectTwo">
