added different files
changes to css and projects.html

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
             <h1 class="projectsNumber">ONE</h1>
         </div>
     </a>
-    <a href="projects.html#projectTwo">
+    <a href="projects2.html#projectTwo">
         <div class="rectangle2">
             <h1 class="projectsNumber">TWO</h1>
         </div>
     </a>
-    <a href="projects.html#projectThree">
+    <a href="projects3.html#projectThree">
         <div class="rectangle3">
             <h1 class="projectsNumber">THREE</h1>
         </div>
