--- a/projects.html
+++ b/projects.html
@@ -18,15 +18,17 @@
         </ul>
     </div> 
 
-    <div id="projectOne">
-        <h1>Project 1: Low Poly Character</h1>
-        <h5>Overview</h5>
+    <div id="projectOne"class="column2">
+        <h1 class="projectTitle">Project 1: Low Poly Character</h1>
+        <h3 class="title">Design Considerations</h3>
+        <h5 class="subtitle">Overview</h5>
         <p>I will be creating a Low Poly Character for a game inspired by Mobile Legends. This will include sketching, modelling, and animating the character. The character will be modelled in blender as well as rigging the character to animate it while idle, running, etc.</p>
-        <h5>End Users</h5>
+        <h5 class="subtitle">End Users</h5>
         <p>The end user of this project would be 14-20 year old people that are into Mobile Legends as well as people who likes playing fictional games preferably people above the age of 14 as this game is designed to be violent. People at this age prefer graphics/characters to be detailed and creative. This includes adding levels to the character and to see growth in the character. It would also require game money that could be purchased at a low price as advertising it expensive doesn't attract that much people to buy the product. Adding different second-lead characters would also help attract people as they can engage and interact with other characters played by different people.</p>
-        <h5>Requirements</h5>
-        <ul>
-            <h6>The character should have the following:</h6>
+        <h5 class="subtitle">Requirements</h5>
+            <p>The character should have the following:</p>
+            <ul>
+            <p>Body</p>
             <p>Head</p>
             <p>Hair</p>
             <p>Fox Ears</p>
@@ -36,31 +38,23 @@
             <p>Legs</p>
             <p>Feet</p>
             <p>Tail</p>
+            <p>Different Skins</p>
             <p>Weapon</p>
-        </ul>
-        <h5>Specifications</h5>
-        <ul>
+            </ul>
+        <h5 class="subtitle">Specifications</h5>
             <p>The upper torso will be narrower than the lower torso.</p>
             <p>The colours of the character should incorporate the colours of a fox which are red, orange, white, black.</p>
             <p>The weapon of the character should be related to fictional life. Maybe create a gun that doesn't shoot bullets.</p>
-        </ul>
     <br>
-        <h3>Relevant Implications</h3>
-        <h6>Aesthetics</h6>
+        <h3 class="title">Relevant Implications</h3>
+        <h6 class="subtitle">Aesthetics</h6>
         <p>To maintain the aesthetics of my character, I will continue to use the same colour pallete throughout this project and make sure that the aesthetics will also please my end-users. I would also ask feedback from my peers to gather information about improvement and what I could change to make the product look proper.</p>
-        <h6>Usability</h6>
+        <h6 class="subtitle">Usability</h6>
         <p>I will be testing every now and then to check whether the changes that I have made with aesthetics as well as functionality has affected the usability of my character. By doing this step, I can avoid bigger problems as I can easily keep track on what part of the process has affected the usability of my character. I will also gather feedback from by peers and ask how their experience with my character, whether the quality of my character is okay anad not experiencing problems.</p>
-        <h6>Functionality</h6>
+        <h6 class="subtitle">Functionality</h6>
         <p>To make sure that my character is functioning properly, I will ensure that the steps that I have made throughout this project will make my character function the way that my end-users want it to function. I will also make sure that my character functions properly and is not affecting any other factor outside funcionality such as usability and aesthetics.</p>
-        <h6>Intellectual Property</h6>
+        <h6 class="subtitle">Intellectual Property</h6>
         <p>This character is inspired by a character from the game 'Mobile Legends: Bang Bang' name 'Nana' who is a sweet Leonin. My character on the other hand is a human fox. By changing features such as colours, face shape, and overall aura, I would be able to make my character different from existing characters. I would also not allow people copying my work as it is my right to have my work protected but people can use my character as a inspiration for theirs.</p>
     </div>
     <br>
-    <div id="projectTwo">
-        <h1>Project Two</h1>
-    </div>
-    <br>
-    <div class="projectThree">
-        <h1>Project Three</h1>
-    </div>
 </body>
