Update to html, css
I have added an image of my turnaround

--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
             <a href = "index.html#projects" class="projectsButton">Projects 🔨</a>
         </ul>
     </div> 
-
+<div class="container2">
     <div id="projectOne"class="column2">
         <h1 class="projectTitle">Project 1: Low Poly Character</h1>
         <h3 class="title">Design Considerations</h3>
@@ -56,5 +56,9 @@
         <h6 class="subtitle">Intellectual Property</h6>
         <p>This character is inspired by a character from the game 'Mobile Legends: Bang Bang' name 'Nana' who is a sweet Leonin. My character on the other hand is a human fox. By changing features such as colours, face shape, and overall aura, I would be able to make my character different from existing characters. I would also not allow people copying my work as it is my right to have my work protected but people can use my character as a inspiration for theirs.</p>
     </div>
+    <div class="column2">
+        <img class= "turnaround" src="images/character turnaround.jpg" alt="character turnaround"/>
+    </div>
+</div>
     <br>
 </body>
