--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
         <p>This character is inspired by a character from the game 'Mobile Legends: Bang Bang' named 'Nana' who is a sweet Leonin. My character on the other hand is a human fox. By changing features such as colours, face shape, and overall aura, I would be able to make my character different from existing characters. I would also not allow people to copy my work as it is my right to have my work protected but people can use my character as an inspiration for theirs.</p>
     </div>
     <div class="column2">
-        <img class= "turnaround" src="images/character turnaround.jpg" alt="character turnaround"/>
+        <img class= "turnaround" src="images/official turnaround.jpg" alt="character turnaround"/>
     </div>
 </div>
     <br>
