--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
     <div class="about" id="aboutme">
         <br>
         <br>
-        <h5 class="aboutTitle">About</h5>
+        <h5 class="aboutTitle">About Me</h5>
         <p class="description">I am a 15-year-old Filipino student at Western Springs College. I watch movies, anime, and TV shows in my free time. The sports that I play are badminton, volleyball, and a bit of basketball. Digital technology has been a part of me for a few years now even before I started at Springs but during my study here in school, my passion for this subject has been different compared to before. The passion in me led me to being dedicated to this field. Seeing people who had their successes in this field has inspired me to be like them in the future.</p>
         </div>
 
     <div class="container3">
         <div class="column3">
-        <h6 class="aboutSubtitle">Portfolio</h6>
+        <h6 class="aboutSubtitle">About the Portfolio</h6>
         <p class="aboutDescription">This portfolio will serve as an exhibition of different topics. It will feature the processes and steps that I have executed including the changes I have made in my design, code, and overall outcome. Projects that I will make in the next few terms will also be shown in the ‘Projects’ section including a description on what is featured in that project.</p>
         </div>
 
         <div class="column3">
-        <h6 class="aboutSubtitle">Past</h6>
+        <h6 class="aboutSubtitle">My Past Projects</h6>
         <p class="aboutDescription">Past Projects were part of the process that I executed to develop certain skills that I have today. Here are the projects that I have done:
             <br>
             <br>
@@ -64,6 +64,11 @@
         <div class="column3">
         <h6 class="aboutSubtitle">Present</h6>
         <p class="aboutDescription">I am currently studying JavaScript and other helpful tags for CSS and HTML. I have recently finished a starter web page about what I did during the holidays. It has helped me practice JavaScript, other HTML and CSS tags.</p>
+        </div>
+
+        <div class="column3">
+        <h6 class="aboutSubtitle">End Users of this Portfolio</h6>
+        <p class="aboutDescription">The end users of this project would be Universities whether it be Professors or fellow students as well as Future Potential Employers that would needs backgound of my past works and projects.</p>
         </div>
    
     </div>
@@ -87,6 +92,9 @@
         </div> 
         <div class="button-container2">
             <button class="toolsName">JavaScript</button>
+        </div>
+        <div class="button-container2">
+            <button class="toolsName">Python</button>
         </div>
         </div>
  
