--- a/projects2.html
+++ b/projects2.html
@@ -17,3 +17,9 @@
             <a href = "index.html#projects" class="projectsButton">Projects 🔨</a>
         </ul>
     </div> 
+<div class="container2">
+     <div id="projectTne"class="column2">
+        
+     </div>
+
+</div>
