--- a/projects2.html
+++ b/projects2.html
@@ -18,8 +18,8 @@
         </ul>
     </div> 
 <div class="container2">
-     <div id="projectTne"class="column2">
-        
+     <div id="projectTwo"class="column2">
+
      </div>
 
 </div>
