--- a/projects2.html
+++ b/projects2.html
@@ -18,8 +18,44 @@
         </ul>
     </div> 
 <div class="container2">
-     <div id="projectTwo"class="column2">
+    <div id="projectTwo"class="column2">
+              <h1 class="projectTitle">Project 2: Python Coded Game</h1>
+        <h3 class="title">Design Considerations</h3>
+        <h5 class="subtitle">Overview</h5>
+        <p>I will be creating a Low Poly Character for a game inspired by Mobile Legends. This will include sketching, modelling, and animating the character. The character will be modelled in blender as well as rigging the character to animate it while idle, running, etc.</p>
+        <h5 class="subtitle">End Users</h5>
+        <p>The end user of this project would be 14-20 year old people that are into Mobile Legends as well as people who likes playing fictional games preferably people above the age of 14 as this game is designed to be violent. People at this age prefer graphics/characters to be detailed and creative. This includes adding levels to the character and to see growth in the character. It would also require game money that could be purchased at a low price as advertising it expensive doesn't attract that much people to buy the product. Adding different second-lead characters would also help attract people as they can engage and interact with other characters played by different people.</p>
+        <h5 class="subtitle">Requirements</h5>
+            <p>The character should have the following:</p>
+            <ul>
+            <p>Body</p>
+            <p>Head</p>
+            <p>Hair</p>
+            <p>Fox Ears</p>
+            <p>Neck</p>
+            <p>Shoulders</p>
+            <p>Torso</p>
+            <p>Legs</p>
+            <p>Feet</p>
+            <p>Tail</p>
+            <p>Different Skins</p>
+            <p>Weapon</p>
+            </ul>
+        <h5 class="subtitle">Specifications</h5>
+            <p>The upper torso will be narrower than the lower torso.</p>
+            <p>The colours of the character should incorporate the colours of a fox which are red, orange, white, black.</p>
+            <p>The weapon of the character should be related to fictional life. Maybe create a gun that doesn't shoot bullets.</p>
+    <br>
+        <h3 class="title">Relevant Implications</h3>
+        <h6 class="subtitle">Aesthetics</h6>
+        <p>To maintain the aesthetics of my character, I will continue to use the same colour pallete throughout this project and make sure that the aesthetics will also please my end-users. I would also ask feedback from my peers to gather information about improvement and what I could change to make the product look proper.</p>
+        <h6 class="subtitle">Usability</h6>
+        <p>I will be testing every now and then to check whether the changes that I have made with aesthetics as well as functionality has affected the usability of my character. By doing this step, I can avoid bigger problems as I can easily keep track of what part of the process has affected the usability of my character. I will also gather feedback from my peers and ask how their experience with my character, whether the quality of my character is okay and not experiencing problems.</p>
+        <h6 class="subtitle">Functionality</h6>
+        <p>To make sure that my character is functioning properly, I will ensure that the steps that I have made throughout this project will make my character function the way that my end-users want it to function. I will also make sure that my character functions properly and is not affecting any other factor outside functionality such as usability and aesthetics.</p>
+        <h6 class="subtitle">Intellectual Property</h6>
+        <p>This character is inspired by a character from the game 'Mobile Legends: Bang Bang' named 'Nana' who is a sweet Leonin. My character on the other hand is a human fox. By changing features such as colours, face shape, and overall aura, I would be able to make my character different from existing characters. I would also not allow people to copy my work as it is my right to have my work protected but people can use my character as an inspiration for theirs.</p>
+    </div>
 
-     </div>
 
 </div>
