--- a/projects2.html
+++ b/projects2.html
@@ -22,24 +22,15 @@
               <h1 class="projectTitle">Project 2: Python Coded Game</h1>
         <h3 class="title">Design Considerations</h3>
         <h5 class="subtitle">Overview</h5>
-        <p>I will be creating a Low Poly Character for a game inspired by Mobile Legends. This will include sketching, modelling, and animating the character. The character will be modelled in blender as well as rigging the character to animate it while idle, running, etc.</p>
+        <p>I will be codiing a Python focused game. It is about words and basically like a Hangman program. It will be scrambled each round and you can play multiple times.</p>
         <h5 class="subtitle">End Users</h5>
-        <p>The end user of this project would be 14-20 year old people that are into Mobile Legends as well as people who likes playing fictional games preferably people above the age of 14 as this game is designed to be violent. People at this age prefer graphics/characters to be detailed and creative. This includes adding levels to the character and to see growth in the character. It would also require game money that could be purchased at a low price as advertising it expensive doesn't attract that much people to buy the product. Adding different second-lead characters would also help attract people as they can engage and interact with other characters played by different people.</p>
+        <p>The end user of this program would be people who likes words and english in general or people that want to expand their vocabulary in a fun way. The age group that this program would be appropriate for is for aged 6+.</p>
         <h5 class="subtitle">Requirements</h5>
-            <p>The character should have the following:</p>
+            <p>What should this include:</p>
             <ul>
-            <p>Body</p>
-            <p>Head</p>
-            <p>Hair</p>
-            <p>Fox Ears</p>
-            <p>Neck</p>
-            <p>Shoulders</p>
-            <p>Torso</p>
-            <p>Legs</p>
-            <p>Feet</p>
-            <p>Tail</p>
-            <p>Different Skins</p>
-            <p>Weapon</p>
+                <p>A list of words</p>
+                <p>Randomiser</p>
+                <p>Different levels of words</p>
             </ul>
         <h5 class="subtitle">Specifications</h5>
             <p>The upper torso will be narrower than the lower torso.</p>
