--- a/projects2.html
+++ b/projects2.html
@@ -22,7 +22,7 @@
               <h1 class="projectTitle">Project 2: Python Coded Game</h1>
         <h3 class="title">Design Considerations</h3>
         <h5 class="subtitle">Overview</h5>
-        <p>I will be codiing a Python focused game. It is about words and basically like a Hangman program. It will be scrambled each round and you can play multiple times.</p>
+        <p>I will be coding a Python focused game. It is about words and basically like a Hangman program. It will be scrambled each round and you can play multiple times.</p>
         <h5 class="subtitle">End Users</h5>
         <p>The end user of this program would be people who likes words and english in general or people that want to expand their vocabulary in a fun way. The age group that this program would be appropriate for is for aged 6+.</p>
         <h5 class="subtitle">Requirements</h5>
@@ -33,9 +33,9 @@
                 <p>Different levels of words</p>
             </ul>
         <h5 class="subtitle">Specifications</h5>
-            <p>The upper torso will be narrower than the lower torso.</p>
-            <p>The colours of the character should incorporate the colours of a fox which are red, orange, white, black.</p>
-            <p>The weapon of the character should be related to fictional life. Maybe create a gun that doesn't shoot bullets.</p>
+            <p>A game that will showcase a whole list of words.</p>
+            <p>It should be fast and won't cause any errors when the input is different.</p>
+            <p>This would be a game that any user can play without any restrictions.</p>
     <br>
         <h3 class="title">Relevant Implications</h3>
         <h6 class="subtitle">Aesthetics</h6>
