--- a/projects2.html
+++ b/projects2.html
@@ -39,14 +39,12 @@
     <br>
         <h3 class="title">Relevant Implications</h3>
         <h6 class="subtitle">Aesthetics</h6>
-        <p>To maintain the aesthetics of my character, I will continue to use the same colour pallete throughout this project and make sure that the aesthetics will also please my end-users. I would also ask feedback from my peers to gather information about improvement and what I could change to make the product look proper.</p>
+        <p>To maintain and make my code look good, I will be making sure to use indents as well as spaces in between code to help our code to be futureproofed. I will also make sure that the letters will be easy to read.</p>
         <h6 class="subtitle">Usability</h6>
-        <p>I will be testing every now and then to check whether the changes that I have made with aesthetics as well as functionality has affected the usability of my character. By doing this step, I can avoid bigger problems as I can easily keep track of what part of the process has affected the usability of my character. I will also gather feedback from my peers and ask how their experience with my character, whether the quality of my character is okay and not experiencing problems.</p>
+        <p>I will be conducting multiple tests to ensure that the user will not be able to experience any errors and I will do this by letting my peers share their feedback regarding on this python programme.</p>
         <h6 class="subtitle">Functionality</h6>
-        <p>To make sure that my character is functioning properly, I will ensure that the steps that I have made throughout this project will make my character function the way that my end-users want it to function. I will also make sure that my character functions properly and is not affecting any other factor outside functionality such as usability and aesthetics.</p>
-        <h6 class="subtitle">Intellectual Property</h6>
-        <p>This character is inspired by a character from the game 'Mobile Legends: Bang Bang' named 'Nana' who is a sweet Leonin. My character on the other hand is a human fox. By changing features such as colours, face shape, and overall aura, I would be able to make my character different from existing characters. I would also not allow people to copy my work as it is my right to have my work protected but people can use my character as an inspiration for theirs.</p>
-    </div>
+        <p>To ensure that the programme works the way it should work, I will be making sure to remember the wants and needs of my end users which is to have a smooth operating prgramme that has the right level of difficulty.</p>
+  </div>
 
 
 </div>
