--- a/projects2.html
+++ b/projects2.html
@@ -24,7 +24,10 @@
         <h5 class="subtitle">Overview</h5>
         <p>I will be coding a Python focused game. It is about words and basically like a Hangman program. It will be scrambled each round and you can play multiple times.</p>
         <h5 class="subtitle">End Users</h5>
-        <p>The end user of this program would be people who likes words and english in general or people that want to expand their vocabulary in a fun way. The age group that this program would be appropriate for is for aged 6+.</p>
+        <p>The end user of this program would be people who likes words and english in general or people that want to expand their vocabulary in a fun way. The age group that this program would be appropriate for is for aged 6+. 
+            What my end-user might need: A easy to use and navigate programme without having to experience errors.
+            What my end-user might want: A level of difficulty in the game that can give them a thrill like experience while playing the game.
+        </p>
         <h5 class="subtitle">Requirements</h5>
             <p>What should this include:</p>
             <ul>
