--- a/index.html
+++ b/index.html
@@ -41,29 +41,37 @@
         <br>
         <br>
         <h5 class="aboutTitle">About Me</h5>
-        <p class="description">I am a 15-year-old Filipino student at Western Springs College. I watch movies, anime, and TV shows in my free time. The sports that I play are badminton, volleyball, and a bit of basketball. Digital technology has been a part of me for a few years now even before I started at Springs but during my study here in school, my passion for this subject has been different compared to before. The passion in me led me to being dedicated to this field. Seeing people who had their successes in this field has inspired me to be like them in the future.</p>
+        <p class="description">I have always had a strong interest in digital technology. Even before starting at Western Springs, I enjoyed exploring how technology shapes the world around us — but my passion truly grew during my time here. Studying this subject has deepened my curiosity and commitment to learning more about design, programming, and digital creation.
+            Outside of school, I enjoy watching movies, anime, and TV shows, and I like playing badminton, volleyball, and occasionally basketball. I find inspiration in people who have built successful careers in technology, and I hope to follow a similar path in the future.
+
+        </p>
         </div>
 
     <div class="container3">
         <div class="column3">
-        <h6 class="aboutSubtitle">About the Portfolio</h6>
-        <p class="aboutDescription">This portfolio will serve as an exhibition of different topics. It will feature the processes and steps that I have executed including the changes I have made in my design, code, and overall outcome. Projects that I will make in the next few terms will also be shown in the ‘Projects’ section including a description on what is featured in that project.</p>
+        <h6 class="aboutSubtitle">Portfolio Overview</h6>
+        <p class="aboutDescription">This portfolio showcases my journey in digital technology — highlighting the projects I have developed, the design and coding processes I have followed, and the improvements I have made along the way.
+It includes my past work, my current studies, and the future projects I will complete in the upcoming terms. Each project will feature a brief description and reflection on the tools and techniques I used.</p>
         </div>
 
         <div class="column3">
         <h6 class="aboutSubtitle">My Past Projects</h6>
-        <p class="aboutDescription">Past Projects were part of the process that I executed to develop certain skills that I have today. Here are the projects that I have done:
+        <p class="aboutDescription">My past projects have helped me develop essential technical and creative skills.
+         Here are a few examples:
+         <ul>
+            - Year 9 (2023): Created a website about the Museum of Transport and Technology, showcasing their features and linking to their official site.
             <br>
             <br>
-            Year 9 (2023) : Website about the Museum of Transport and Technology. Featuring what they have to offer and their official website.
-            <br>
-            Year 10 (2024) : 3d models of things around us. A simple game that we have developed using Ozaria. 
+            - Year 10 (2024): Designed 3D models of everyday objects and developed a simple game using Ozaria.
+        </ul>
+
         </p>
         </div>
         
         <div class="column3">
         <h6 class="aboutSubtitle">Present</h6>
-        <p class="aboutDescription">I am currently studying JavaScript and other helpful tags for CSS and HTML. I have recently finished a starter web page about what I did during the holidays. It has helped me practice JavaScript, other HTML and CSS tags.</p>
+        <p class="aboutDescription">I am currently studying JavaScript, as well as expanding my knowledge of HTML and CSS. Recently, I built a starter webpage about my holiday activities — a project that helped me practice JavaScript and experiment with new HTML and CSS techniques.
+        </p>
         </div>
 
         <div class="column3">
