--- a/index.html
+++ b/index.html
@@ -25,10 +25,27 @@
         <br>
         <h3 class="year"> Year 11 Portfolio</h3>
         <br>
-        <div class="button-container">
-            <button class="contact" >CONTACT ME</button>
-            <button class="feedback" >FEEDBACK</button>
-        </div>
+
+<section class="contact">
+    <h2>Contact Me</h2>
+    <p>Have a question or want to work together? Send me a message below!</p>
+
+    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Your name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Your email" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" placeholder="Your message..." required></textarea>
+
+        <!-- This button sends the form -->
+        <button type="submit" class="btn">Send Message</button>
+    </form>
+    
+</section>
+</section>
 <img class="homepicture1" src="images/me pc.jpg" alt="Psalm de Mesa">
 <img class="homepicture2" src="images/me pc2.jpg" alt="Psalm de Mesa">
     </div>
